k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: securebid
  labels:
    app.kubernetes.io/name: secure-bid-platform
    app.kubernetes.io/component: api
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
